package de.fraunhofer.iais.eis.ids.component.protocol.http.server;

import de.fraunhofer.iais.eis.ids.component.interaction.ComponentInteractor;

public interface ComponentInteractorProvider {

    ComponentInteractor getComponentInteractor();

}
